--- a/yash/DSA_JavaScript/8_Recursion.html
+++ b/yash/DSA_JavaScript/8_Recursion.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Recursion Data Structure</title>
+    <title> Recursion Data Structure (Direct Recursion)</title>
 </head>
 
 <body>
-    <h1> Recursion Data Structure</h1>
+    <h1> Recursion Data Structure(Direct Recursion)</h1>
     <script>
         function Recursion(v){
             console.log(v)
