--- a/yash/DSA_JavaScript/18_Queue_Circular.html
+++ b/yash/DSA_JavaScript/18_Queue_Circular.html
@@ -63,38 +63,17 @@
                 }
 
             }
-            //  display() {
-            //     console.log(queue)
-            // }
-
-            //  front() {
-            //     if (!isEmpty()) {
-            //         console.log(queue[0])
-            //     } else {
-            //         alert("queue is already empty")
-            //     }
-            // }
-            //  rear() {
-            //     if (!isEmpty()) {
-            //         console.log(queue[currentSize - 1])
-            //     } else {
-            //         alert("queue is already empty")
-            //     }
-            // }
-            //  isEmpty() {
-            //     if (currentSize <= 0) {
-            //         return true;
-            //     } else {
-            //         return false;
-            //     }
-            // }
-
+            
             
         }
         let obj1=new Queue(5)
         obj1.enqueue(23)
         obj1.enqueue(1)
         obj1.enqueue(38)
+        obj1.enqueue(48)
+        obj1.enqueue(58)
+        console.log(obj1)
+        obj1.dequeue()
 
 
 
