--- a/yash/DSA_JavaScript/7_Array_Sorting.html
+++ b/yash/DSA_JavaScript/7_Array_Sorting.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Array Sorting</title>
+    <title>Array Sorting Bubble</title>
 </head>
 
 <body>
-    <h1>Array Sorting</h1>
+    <h1>Array Sorting Bubble</h1>
     <script>
         let data = [12, 45, 20, 33, 27,  78]
 
