--- a/yash/DSA_JavaScript/21_Sorting_Selection.html
+++ b/yash/DSA_JavaScript/21_Sorting_Selection.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Binary Search With Recursive</title>
+    <title>Selection Sorting</title>
 </head>
 
 <body>
-    <h1>Binary Search With Recursive</h1>
+    <h1>Selection Sorting</h1>
     
     <script>
         let data=[6,8,22,35,56,87]
