--- a/yash/javascript-projects/hit-mosquito/hit-mosquito.html
+++ b/yash/javascript-projects/hit-mosquito/hit-mosquito.html
@@ -10,7 +10,7 @@
             position: relative;
             background-image: url(wheat.png);
             height: 100vh;
-            width: 50%;
+            width: 850px;
             float: left;
             background-repeat: no-repeat;
             background-size: auto;
@@ -20,7 +20,7 @@
             position: relative;
             background-repeat: no-repeat;
             background-size: auto;
-            height: 30px;
+            height: 100px;
         }
     </style>
 </head>
