--- a/yash/javascript-projects/hit-mosquito/hit-mosquito.html
+++ b/yash/javascript-projects/hit-mosquito/hit-mosquito.html
@@ -6,21 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hit Mosquito</title>
     <style>
+        body{
+            display: flex;
+            margin: auto;
+        }
         .playground {
             position: relative;
             background-image: url(wheat.png);
-            height: 100vh;
-            width: 850px;
-            float: left;
+            background-size: cover;
+            /* <------ */
             background-repeat: no-repeat;
-            background-size: auto;
-        }
+            background-position: center center;
+            height: 100vh;
+            width: 50vw;
+            
 
+        }
         .mosquito {
             position: relative;
             background-repeat: no-repeat;
             background-size: auto;
             height: 100px;
+        }
+        .controls{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            
         }
     </style>
 </head>
@@ -30,19 +43,23 @@
         <img class="mosquito" onclick="hitMosquito()" src="mosquito.png" alt="" srcset="">
     </div>
     <div class="controls">
+        <div class="countdown">00:00:00</div>
+        <div>
         <h3><span>Total</span><span class="totalHit"></span></h3>
         <button type="button" onclick="startGame()">Start</button>
+    </div>
     </div>
     <script>
         let totalHit = 0;
         function startGame() {
             let mosquito = document.querySelector('.mosquito')
             let time = setInterval(() => {
-                var i = Math.floor(Math.random() * 500) + 1
-                var j = Math.floor(Math.random() * 500) + 1
-                mosquito.style.left = i + "px"
-                mosquito.style.top = j + "px"
-            }, 2000)
+                var i = Math.floor(Math.random() * 90) + 1
+                var j = Math.floor(Math.random() * 45) + 1
+                mosquito.style.left = i + "vh"
+                mosquito.style.top = j + "vw"
+            }, 1500)
+
             setTimeout(() => {
                 clearTimeout(time)
             }, 30000)
@@ -53,10 +70,36 @@
         function hitMosquito() {
             totalHit = totalHit + 1;
             document.querySelector('.totalHit').textContent = totalHit;
-
-
-
         }
+
+        // Set the date we're counting down to
+var countDownDate = new Date().getSeconds() + 60;
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.querySelector(".countdown").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";
+
+  // If the count down is finished, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.querySelector(".countdown").innerHTML = "EXPIRED";
+  }
+}, 1000);
     </script>
 </body>
 
