--- a/yash/javascript-projects/hit-mosquito/hit-mosquito.html
+++ b/yash/javascript-projects/hit-mosquito/hit-mosquito.html
@@ -7,8 +7,11 @@
     <title>Hit Mosquito</title>
     <style>
         body {
-            display: flex;
-            margin: auto;
+            margin: 0 auto;
+        }
+        .wrapper{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
         }
 
         .playground {
@@ -20,6 +23,7 @@
             background-position: center center;
             height: 100vh;
             width: 50vw;
+            border: 5px solid #445d44;
 
 
         }
@@ -38,18 +42,29 @@
             flex-direction: column;
 
         }
+        .wrapper2{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+        button{
+            padding: 0 auto;
+        }
     </style>
 </head>
 
 <body>
-    <div class="playground">
-        <img class="mosquito" onclick="hitMosquito()" src="mosquito.png" alt="" srcset="">
-    </div>
-    <div class="controls">
-        <div class="countdown">00:00:00</div>
-        <div>
-            <h3><span>Total</span><span class="totalHit"></span></h3>
-            <button type="button" onclick="startGame()">Start</button>
+    <div class="wrapper">
+        <div class="playground">
+            <img class="mosquito" onclick="hitMosquito()" src="mosquito.png" alt="" srcset="">
+        </div>
+        <div class="controls">
+            <h1>Count Down</h1>
+            <h2 class="countdown">00:00:00</h2>
+            <div class="wrapper2p">
+                <h3><span>Your Score: </span><span class="totalHit">0</span></h3>
+                <button type="button" onclick="startGame()">Start</button>
+            </div>
         </div>
     </div>
     <script>
