--- a/yash/javascript-projects/hit-mosquito/hit-mosquito.html
+++ b/yash/javascript-projects/hit-mosquito/hit-mosquito.html
@@ -34,6 +34,9 @@
             background-repeat: no-repeat;
             background-size: auto;
             height: 100px;
+            -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
         }
 
         .controls {
@@ -48,6 +51,9 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 10px;
+        }
+        .wrapper2p{
+            display: contents;
         }
 
         button {
@@ -71,31 +77,50 @@
             <h1 class="countdown">00:00</h1>
             <div class="wrapper2p">
                 <h3><span>Your Score: </span><span class="totalHit">0</span></h3>
-                <button type="button" class="start" onclick="startGame(this,event)" >Start</button>
+                <button type="button" class="start" onclick="startGame(this,event)">Start</button>
+                <button type="button" class="stop" style="display: none;" onclick="stopGame(this,event)">Stop</button>
             </div>
         </div>
     </div>
     <script>
         let totalHit = 0;
         let = duration = 59000
-        function startGame(ele,e) {
-            this.setAttribute('disabled');
+
+        function startGame(ele, e) {
+            document.querySelector('.start').style.display = 'none';
+            document.querySelector('.stop').style.display = 'block';
+
             let mosquito = document.querySelector('.mosquito')
             let time = setInterval(() => {
                 var i = Math.floor(Math.random() * 90) + 1
                 var j = Math.floor(Math.random() * 45) + 1
                 mosquito.style.left = i + "vh"
                 mosquito.style.top = j + "vw"
-            }, 1500)
+            }, 800)
 
             setTimeout(() => {
                 clearTimeout(time)
+                document.querySelector('.start').style.display = 'block';
+                document.querySelector('.stop').style.display = 'none';
             }, duration)
             countdown();
         }
+        function stopGame() {
+            document.querySelector('.start').style.display = 'block';
+            document.querySelector('.stop').style.display = 'none';
+            const interval_id = window.setInterval(function () { }, Number.MAX_SAFE_INTEGER);
+            // Clear any timeout/interval up to that id
+            for (let i = 1; i < interval_id; i++) {
+                window.clearInterval(i);
+            }
+            getConfetti()
+        }
         function hitMosquito() {
-            totalHit = totalHit + 1;
-            document.querySelector('.totalHit').textContent = totalHit;
+            if (document.querySelector('.start').style.display == 'none') {
+                totalHit = totalHit + 1;
+                document.querySelector('.totalHit').textContent = totalHit;
+            }
+            return false;
         }
 
         function countdown() {
@@ -131,39 +156,39 @@
         }
 
 
-        
-        
+
+
         function randomInRange(min, max) {
             return Math.random() * (max - min) + min;
         }
 
-        function getConfetti(){
+        function getConfetti() {
             const duration = 15 * 1000,
-            animationEnd = Date.now() + duration,
-            defaults = { startVelocity: 30, spread: 360, ticks: 60, zIndex: 0 };
+                animationEnd = Date.now() + duration,
+                defaults = { startVelocity: 30, spread: 360, ticks: 60, zIndex: 0 };
             const interval = setInterval(function () {
-            const timeLeft = animationEnd - Date.now();
+                const timeLeft = animationEnd - Date.now();
 
-            if (timeLeft <= 0) {
-                return clearInterval(interval);
-            }
+                if (timeLeft <= 0) {
+                    return clearInterval(interval);
+                }
 
-            const particleCount = 50 * (timeLeft / duration);
+                const particleCount = 50 * (timeLeft / duration);
 
-            // since particles fall down, start a bit higher than random
-            confetti(
-                Object.assign({}, defaults, {
-                    particleCount,
-                    origin: { x: randomInRange(0.1, 0.3), y: Math.random() - 0.2 },
-                })
-            );
-            confetti(
-                Object.assign({}, defaults, {
-                    particleCount,
-                    origin: { x: randomInRange(0.7, 0.9), y: Math.random() - 0.2 },
-                })
-            );
-        }, 250);
+                // since particles fall down, start a bit higher than random
+                confetti(
+                    Object.assign({}, defaults, {
+                        particleCount,
+                        origin: { x: randomInRange(0.1, 0.3), y: Math.random() - 0.2 },
+                    })
+                );
+                confetti(
+                    Object.assign({}, defaults, {
+                        particleCount,
+                        origin: { x: randomInRange(0.7, 0.9), y: Math.random() - 0.2 },
+                    })
+                );
+            }, 250);
 
         }
 
