--- a/yash/javascript-projects/hit-mosquito/hit-mosquito.html
+++ b/yash/javascript-projects/hit-mosquito/hit-mosquito.html
@@ -34,9 +34,12 @@
             background-repeat: no-repeat;
             background-size: auto;
             height: 100px;
-            -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
+            -webkit-user-select: none;
+            /* Safari */
+            -ms-user-select: none;
+            /* IE 10 and IE 11 */
+            user-select: none;
+            /* Standard syntax */
         }
 
         .controls {
@@ -52,7 +55,8 @@
             grid-template-columns: 1fr 1fr;
             gap: 10px;
         }
-        .wrapper2p{
+
+        .wrapper2p {
             display: contents;
         }
 
