--- a/yash/javascript-projects/love-calculator/index.html
+++ b/yash/javascript-projects/love-calculator/index.html
@@ -26,6 +26,11 @@
         function loveCalculate(){
            let your_name= document.querySelector('.your_name').value;
            let your_love_name= document.querySelector('.your_love_name').value;
+           if(your_name && your_love_name){
+
+           }else{
+                alert('Please Enter Valid Name')
+           }
         }
     </script>
 </body>
