--- a/yash/javascript-projects/chrome-game/index.html
+++ b/yash/javascript-projects/chrome-game/index.html
@@ -6,6 +6,11 @@
     <title>Chrome Game</title>
 </head>
 <body>
-    
+    <div class="game" id="game">
+        <img src="" alt="" class="character">
+    </div>
+    <div class="stone">
+        
+    </div>
 </body>
 </html>
